rpmzig/rpmdb.h

typedef struct tdnf_rpm_config tdnf_rpm_config;
/* --- native rpm configuration and macro expansion --- */

/**
 * Create a handle-scoped native rpm configuration rooted at
 * `install_root`. Pass NULL or "" for "/".
 *
 * Returns NULL on error (use tdnf_rpmdb_last_error()).
 */
tdnf_rpm_config *tdnf_rpm_config_create(const char *install_root);
/**
 * Destroy a configuration created by tdnf_rpm_config_create().
 * Accepts NULL.
 */
void tdnf_rpm_config_destroy(tdnf_rpm_config *config);
/**
 * Apply one command-line rpmdefine in whitespace or equals form.
 *
 * Returns 0 on success, -1 on invalid input or allocation failure.
 */
int tdnf_rpm_config_apply_define(
    tdnf_rpm_config *config,
    const char *definition
);