include/tdnfrepomd.h

typedef struct _TDNF_REPOQUERY_ARGS TDNF_REPOQUERY_ARGS, *PTDNF_REPOQUERY_ARGS;
enum {
    TDNF_REPOMD_RECORD_KIND_UNKNOWN = 0,
    TDNF_REPOMD_RECORD_KIND_PRIMARY = 1,
    TDNF_REPOMD_RECORD_KIND_FILELISTS = 2,
    TDNF_REPOMD_RECORD_KIND_OTHER = 3,
    TDNF_REPOMD_RECORD_KIND_UPDATEINFO = 4,
};
typedef struct _TDNF_REPOMD_CHECKSUM
{
    const char *pszType;
    const char *pszValue;
} TDNF_REPOMD_CHECKSUM;
typedef struct _TDNF_REPOMD_RECORD
{
    const char *pszType;
    uint32_t dwKind;
    const char *pszLocationHref;
    TDNF_REPOMD_CHECKSUM checksum;
    TDNF_REPOMD_CHECKSUM openChecksum;
    uint64_t nTimestamp;
    uint64_t nSize;
    uint64_t nOpenSize;
    uint64_t nDatabaseVersion;
    int nHasTimestamp;
    int nHasSize;
    int nHasOpenSize;
    int nHasDatabaseVersion;
} TDNF_REPOMD_RECORD;
typedef struct _TDNF_REPOMD_NATIVE_REPO_INPUT
{
    const char *pszId;
    const char *pszCacheDir;
    const char *pszSnapshotFile;
} TDNF_REPOMD_NATIVE_REPO_INPUT, *PTDNF_REPOMD_NATIVE_REPO_INPUT;
enum {
    TDNF_REPOMD_NATIVE_TRANSACTION_OP_INSTALL = 1,
    TDNF_REPOMD_NATIVE_TRANSACTION_OP_REINSTALL = 2,
    TDNF_REPOMD_NATIVE_TRANSACTION_OP_ERASE = 3,
    TDNF_REPOMD_NATIVE_TRANSACTION_OP_UPGRADE = 4,
};
typedef struct _TDNF_REPOMD_NATIVE_TRANSACTION_ITEM
{
    uint32_t dwOperation;
    const char *pszPath;
    const char *pszName;
    const char *pszEVR;
    const char *pszArch;
} TDNF_REPOMD_NATIVE_TRANSACTION_ITEM, *PTDNF_REPOMD_NATIVE_TRANSACTION_ITEM;
/*
 * Versioned transaction input. The legacy structure above is ABI-stable and
 * remains the input to the original transaction APIs.
 */
typedef struct _TDNF_REPOMD_NATIVE_TRANSACTION_ITEM_V2
{
    uint32_t dwOperation;
    const char *pszPath;
    const char *pszName;
    const char *pszEVR;
    const char *pszArch;
    /* Exact Packages-row identity for erase; zero for legacy lookup/others. */
    uint32_t dwRpmDbHnum;
} TDNF_REPOMD_NATIVE_TRANSACTION_ITEM_V2,
 *PTDNF_REPOMD_NATIVE_TRANSACTION_ITEM_V2;
typedef enum _TDNF_REPOMD_NATIVE_PROBLEM_TYPE
{
    TDNF_REPOMD_NATIVE_PROBLEM_DEPENDENCY = 1,
    TDNF_REPOMD_NATIVE_PROBLEM_PRETRANS = 2,
    TDNF_REPOMD_NATIVE_PROBLEM_CONFLICT = 3,
    TDNF_REPOMD_NATIVE_PROBLEM_OBSOLETES = 4,
    TDNF_REPOMD_NATIVE_PROBLEM_FILE_CONFLICT = 5,
    TDNF_REPOMD_NATIVE_PROBLEM_UNSUPPORTED_MULTIPLE = 6
} TDNF_REPOMD_NATIVE_PROBLEM_TYPE;
/*
 * A native transaction problem. Strings alias the containing plan and remain
 * valid until TDNFRepoMdNativeTransactionPlanFree().
 *
 * pszPackage is the package that raised the problem. pszRelatedPackage is
 * populated for package/file conflicts. pszSubject is the missing dependency,
 * conflicting path, or package name whose installed multiplicity is
 * unsupported.
 */
typedef struct _TDNF_REPOMD_NATIVE_TRANSACTION_PROBLEM
{
    TDNF_REPOMD_NATIVE_PROBLEM_TYPE nType;
    uint32_t dwInputIndex;
    const char *pszPackage;
    const char *pszRelatedPackage;
    const char *pszSubject;
    uint32_t dwCount;
} TDNF_REPOMD_NATIVE_TRANSACTION_PROBLEM;
/*
 * Per-input execution metadata. Prior hnums are stored in the plan's flat
 * pdwPriorHnums array at [dwPriorOffset, dwPriorOffset + dwPriorCount).
 */
typedef struct _TDNF_REPOMD_NATIVE_TRANSACTION_PLAN_ITEM
{
    uint32_t dwPriorOffset;
    uint32_t dwPriorCount;
} TDNF_REPOMD_NATIVE_TRANSACTION_PLAN_ITEM;
/*
 * One owned, validated native transaction plan. pdwOrderIndices is a complete
 * permutation of the original input indexes. pItems is indexed by original
 * input index and identifies the exact installed rows superseded by each
 * upgrade or reinstall.
 */
typedef struct _TDNF_REPOMD_NATIVE_TRANSACTION_PLAN
{
    uint32_t dwItemCount;
    uint32_t *pdwOrderIndices;
    TDNF_REPOMD_NATIVE_TRANSACTION_PLAN_ITEM *pItems;
    uint32_t dwPriorHnumCount;
    uint32_t *pdwPriorHnums;
    uint32_t dwProblemCount;
    TDNF_REPOMD_NATIVE_TRANSACTION_PROBLEM *pProblems;
} TDNF_REPOMD_NATIVE_TRANSACTION_PLAN;
/*
 * One package referenced by a native solver result. Package references in
 * the other result arrays are zero-based indexes into pPackages. Optional
 * scalar values are accompanied by explicit nHas* fields.
 */
typedef struct _TDNF_REPOMD_NATIVE_SOLVER_PACKAGE
{
    const char *pszRepository;
    const char *pszName;
    const char *pszVersion;
    const char *pszRelease;
    const char *pszArch;
    const char *pszChecksumType;
    const char *pszChecksumValue;
    const char *pszLocationHref;
    const char *pszLocationBase;
    const char *pszSummary;
    uint64_t nPackageSize;
    uint64_t nInstalledSize;
    uint32_t dwPackageId;
    uint32_t dwRepositoryId;
    uint32_t dwEpoch;
    uint32_t dwRpmDbHnum;
    int nRepositoryKind;
    int nHasEpoch;
    int nHasRpmDbHnum;
    int nChecksumIsPkgId;
    int nChecksumIsHeaderOnly;
    int nHasPackageSize;
    int nHasInstalledSize;
} TDNF_REPOMD_NATIVE_SOLVER_PACKAGE;
/*
 * Canonical package decision. Prior package references occupy
 * [dwPriorOffset, dwPriorOffset + dwPriorCount) in both
 * pdwPriorPackageRefs and pdwPriorHnums.
 */
typedef struct _TDNF_REPOMD_NATIVE_SOLVER_ACTION
{
    uint32_t dwPackageRef;
    uint32_t dwKind;
    uint32_t dwReason;
    uint32_t dwPriorOffset;
    uint32_t dwPriorCount;
    uint32_t dwRequestedJobId;
    int nHasRequestedJobId;
} TDNF_REPOMD_NATIVE_SOLVER_ACTION;
typedef struct _TDNF_REPOMD_NATIVE_SOLVER_RELATION
{
    const char *pszName;
    const char *pszVersion;
    const char *pszRelease;
    const char *pszFlags;
    uint32_t dwComparison;
    uint32_t dwEpoch;
    uint32_t dwSense;
    int nHasEpoch;
    int nPre;
} TDNF_REPOMD_NATIVE_SOLVER_RELATION;
typedef struct _TDNF_REPOMD_NATIVE_SOLVER_PROBLEM
{
    TDNF_REPOMD_NATIVE_SOLVER_RELATION capability;
    uint32_t dwKind;
    uint32_t dwPackageRef;
    uint32_t dwRelatedPackageRef;
    uint32_t dwJobId;
    uint32_t dwCount;
    int nHasPackageRef;
    int nHasRelatedPackageRef;
    int nHasCapability;
    int nHasJobId;
} TDNF_REPOMD_NATIVE_SOLVER_PROBLEM;
/*
 * Owned canonical native solver output. Every pointer, including all strings,
 * remains valid until TDNFRepoMdNativeSolverResultFree(). Array order matches
 * the native materializer; the package table is ordered by native package id.
 */
typedef struct _TDNF_REPOMD_NATIVE_SOLVER_RESULT
{
    TDNF_REPOMD_NATIVE_SOLVER_PACKAGE *pPackages;
    uint32_t *pdwSelectedPackageRefs;
    TDNF_REPOMD_NATIVE_SOLVER_ACTION *pActions;
    uint32_t *pdwPriorPackageRefs;
    uint32_t *pdwPriorHnums;
    TDNF_REPOMD_NATIVE_SOLVER_PROBLEM *pProblems;
    uint32_t *pdwSkippedJobIds;
    uint32_t dwPackageCount;
    uint32_t dwSelectedPackageCount;
    uint32_t dwActionCount;
    uint32_t dwPriorPackageRefCount;
    uint32_t dwProblemCount;
    uint32_t dwSkippedJobCount;
} TDNF_REPOMD_NATIVE_SOLVER_RESULT;