abi/internal.zig

pub const struct__TDNF_REPOSYNC_ARGS = extern struct {
    nDelete: c_int = 0,
    nDownloadMetadata: c_int = 0,
    nGPGCheck: c_int = 0,
    nNewestOnly: c_int = 0,
    nPrintUrlsOnly: c_int = 0,
    nNoRepoPath: c_int = 0,
    nSourceOnly: c_int = 0,
    pszDownloadPath: [*c]u8 = null,
    pszMetaDataPath: [*c]u8 = null,
    ppszArchs: [*c][*c]u8 = null,
};
pub const TDNF_REPOSYNC_ARGS = struct__TDNF_REPOSYNC_ARGS;
pub const PTDNF_REPOSYNC_ARGS = [*c]struct__TDNF_REPOSYNC_ARGS;
pub const REPOQUERY_WHAT_KEY_PROVIDES: c_int = 0;
pub const REPOQUERY_WHAT_KEY_OBSOLETES: c_int = 1;
pub const REPOQUERY_WHAT_KEY_CONFLICTS: c_int = 2;
pub const REPOQUERY_WHAT_KEY_REQUIRES: c_int = 3;
pub const REPOQUERY_WHAT_KEY_RECOMMENDS: c_int = 4;
pub const REPOQUERY_WHAT_KEY_SUGGESTS: c_int = 5;
pub const REPOQUERY_WHAT_KEY_SUPPLEMENTS: c_int = 6;
pub const REPOQUERY_WHAT_KEY_ENHANCES: c_int = 7;
pub const REPOQUERY_WHAT_KEY_DEPENDS: c_int = 8;
pub const REPOQUERY_WHAT_KEY_COUNT: c_int = 9;
pub const REPOQUERY_DEP_KEY_PROVIDES: c_int = 0;
pub const REPOQUERY_DEP_KEY_OBSOLETES: c_int = 1;
pub const REPOQUERY_DEP_KEY_CONFLICTS: c_int = 2;
pub const REPOQUERY_DEP_KEY_REQUIRES: c_int = 3;
pub const REPOQUERY_DEP_KEY_RECOMMENDS: c_int = 4;
pub const REPOQUERY_DEP_KEY_SUGGESTS: c_int = 5;
pub const REPOQUERY_DEP_KEY_SUPPLEMENTS: c_int = 6;
pub const REPOQUERY_DEP_KEY_ENHANCES: c_int = 7;
pub const REPOQUERY_DEP_KEY_DEPENDS: c_int = 8;
pub const REPOQUERY_DEP_KEY_REQUIRES_PRE: c_int = 9;
pub const REPOQUERY_DEP_KEY_COUNT: c_int = 10;
pub const struct__TDNF_REPOQUERY_ARGS = extern struct {
    pszSpec: [*c]u8 = null,
    nAvailable: c_int = 0,
    nDuplicates: c_int = 0,
    nExtras: c_int = 0,
    nLocation: c_int = 0,
    nInstalled: c_int = 0,
    nUpgrades: c_int = 0,
    nDowngrades: c_int = 0,
    nUserInstalled: c_int = 0,
    pszFile: [*c]u8 = null,
    pppszWhatKeys: [*c][*c][*c]u8 = null,
    ppszArchs: [*c][*c]u8 = null,
    nChangeLogs: c_int = 0,
    depKeySet: c_uint = 0,
    nList: c_int = 0,
    pszQueryFormat: [*c]u8 = null,
    nSource: c_int = 0,
};
pub const TDNF_REPOQUERY_ARGS = struct__TDNF_REPOQUERY_ARGS;
pub const PTDNF_REPOQUERY_ARGS = [*c]struct__TDNF_REPOQUERY_ARGS;
pub const HISTORY_CMD_LIST: c_int = 0;
pub const HISTORY_CMD_INIT: c_int = 1;
pub const HISTORY_CMD_ROLLBACK: c_int = 2;
pub const HISTORY_CMD_UNDO: c_int = 3;
pub const HISTORY_CMD_REDO: c_int = 4;
pub const HISTORY_CMD_ID: c_int = 5;
pub const HISTORY_CMD = c_uint;
pub const struct__TDNF_HISTORY_ARGS = extern struct {
    nCommand: HISTORY_CMD = @import("std").mem.zeroes(HISTORY_CMD),
    nInfo: c_int = 0,
    nFrom: c_int = 0,
    nTo: c_int = 0,
    nReverse: c_int = 0,
    pszSpec: [*c]u8 = null,
};
pub const TDNF_HISTORY_ARGS = struct__TDNF_HISTORY_ARGS;
pub const PTDNF_HISTORY_ARGS = [*c]struct__TDNF_HISTORY_ARGS;
pub const struct__TDNF_HISTORY_INFO_ITEM = extern struct {
    nId: c_int = 0,
    nType: c_int = 0,
    pszCmdLine: [*c]u8 = null,
    timeStamp: time_t = 0,
    nAddedCount: c_int = 0,
    nRemovedCount: c_int = 0,
    ppszAddedPkgs: [*c][*c]u8 = null,
    ppszRemovedPkgs: [*c][*c]u8 = null,
};
pub const TDNF_HISTORY_INFO_ITEM = struct__TDNF_HISTORY_INFO_ITEM;
pub const PTDNF_HISTORY_INFO_ITEM = [*c]struct__TDNF_HISTORY_INFO_ITEM;
pub const struct__TDNF_HISTORY_INFO = extern struct {
    nItemCount: c_int = 0,
    pItems: PTDNF_HISTORY_INFO_ITEM = null,
};
pub const TDNF_HISTORY_INFO = struct__TDNF_HISTORY_INFO;
pub const PTDNF_HISTORY_INFO = [*c]struct__TDNF_HISTORY_INFO;
pub const TDNF_ZIG_XFERINFOFUNCTION = ?*const fn (pUserData: ?*anyopaque, nDownloadTotal: i64, nDownloadedNow: i64, nUploadTotal: i64, nUploadedNow: i64) callconv(.c) c_int;
pub const struct__TDNF_ZIG_DOWNLOAD_REQUEST = extern struct {
    pszUrl: [*c]const u8 = null,
    pszDestination: [*c]const u8 = null,
    pfnProgress: TDNF_ZIG_XFERINFOFUNCTION = null,
    pProgressData: ?*anyopaque = null,
    pszUserAgent: [*c]const u8 = null,
    pszProxy: [*c]const u8 = null,
    pszProxyUserPwd: [*c]const u8 = null,
    pszUserName: [*c]const u8 = null,
    pszPassword: [*c]const u8 = null,
    pszSSLCaCert: [*c]const u8 = null,
    pszSSLClientCert: [*c]const u8 = null,
    pszSSLClientKey: [*c]const u8 = null,
    nSSLVerify: c_int = 0,
    nConnectTimeout: c_long = 0,
    nTimeout: c_long = 0,
    nLowSpeedLimit: c_long = 0,
    nLowSpeedTime: c_long = 0,
    nMaxRecvSpeed: c_long = 0,
};
pub const TDNF_ZIG_DOWNLOAD_REQUEST = struct__TDNF_ZIG_DOWNLOAD_REQUEST;
pub extern fn tdnf_rpm_config_create(pszInstallRoot: [*c]const u8) ?*tdnf_rpm_config;
pub extern fn tdnf_rpm_config_destroy(pConfig: ?*tdnf_rpm_config) void;
pub extern fn tdnf_rpm_config_apply_define(pConfig: ?*tdnf_rpm_config, pszDefinition: [*c]const u8) c_int;
pub const TDNF_REPOMD_RECORD_KIND_UNKNOWN: c_int = 0;
pub const TDNF_REPOMD_RECORD_KIND_PRIMARY: c_int = 1;
pub const TDNF_REPOMD_RECORD_KIND_UPDATEINFO: c_int = 4;
pub const struct__TDNF_REPOMD_CHECKSUM = extern struct {
    pszType: [*c]const u8 = null,
    pszValue: [*c]const u8 = null,
};
pub const TDNF_REPOMD_CHECKSUM = struct__TDNF_REPOMD_CHECKSUM;
pub const struct__TDNF_REPOMD_RECORD = extern struct {
    pszType: [*c]const u8 = null,
    dwKind: u32 = 0,
    pszLocationHref: [*c]const u8 = null,
    checksum: TDNF_REPOMD_CHECKSUM = @import("std").mem.zeroes(TDNF_REPOMD_CHECKSUM),
    openChecksum: TDNF_REPOMD_CHECKSUM = @import("std").mem.zeroes(TDNF_REPOMD_CHECKSUM),
    nTimestamp: u64 = 0,
    nSize: u64 = 0,
    nOpenSize: u64 = 0,
    nDatabaseVersion: u64 = 0,
    nHasTimestamp: c_int = 0,
    nHasSize: c_int = 0,
    nHasOpenSize: c_int = 0,
    nHasDatabaseVersion: c_int = 0,
};
pub const TDNF_REPOMD_RECORD = struct__TDNF_REPOMD_RECORD;
pub const struct__TDNF_REPOMD_NATIVE_REPO_INPUT = extern struct {
    pszId: [*c]const u8 = null,
    pszCacheDir: [*c]const u8 = null,
    pszSnapshotFile: [*c]const u8 = null,
    pszDirectory: [*c]const u8 = null,
};
pub const TDNF_REPOMD_NATIVE_REPO_INPUT = struct__TDNF_REPOMD_NATIVE_REPO_INPUT;
pub const PTDNF_REPOMD_NATIVE_REPO_INPUT = [*c]struct__TDNF_REPOMD_NATIVE_REPO_INPUT;
pub const TDNF_REPOMD_NATIVE_TRANSACTION_OP_INSTALL: c_int = 1;
pub const TDNF_REPOMD_NATIVE_TRANSACTION_OP_REINSTALL: c_int = 2;
pub const TDNF_REPOMD_NATIVE_TRANSACTION_OP_ERASE: c_int = 3;
pub const TDNF_REPOMD_NATIVE_TRANSACTION_OP_UPGRADE: c_int = 4;
pub const struct__TDNF_REPOMD_NATIVE_TRANSACTION_ITEM = extern struct {
    dwOperation: u32 = 0,
    pszPath: [*c]const u8 = null,
    pszName: [*c]const u8 = null,
    pszEVR: [*c]const u8 = null,
    pszArch: [*c]const u8 = null,
};
pub const TDNF_REPOMD_NATIVE_TRANSACTION_ITEM = struct__TDNF_REPOMD_NATIVE_TRANSACTION_ITEM;
pub const struct__TDNF_REPOMD_NATIVE_TRANSACTION_ITEM_V2 = extern struct {
    dwOperation: u32 = 0,
    pszPath: [*c]const u8 = null,
    pszName: [*c]const u8 = null,
    pszEVR: [*c]const u8 = null,
    pszArch: [*c]const u8 = null,
    dwRpmDbHnum: u32 = 0,
};
pub const TDNF_REPOMD_NATIVE_TRANSACTION_ITEM_V2 = struct__TDNF_REPOMD_NATIVE_TRANSACTION_ITEM_V2;
pub const TDNF_REPOMD_NATIVE_PROBLEM_DEPENDENCY: c_int = 1;
pub const TDNF_REPOMD_NATIVE_PROBLEM_PRETRANS: c_int = 2;
pub const TDNF_REPOMD_NATIVE_PROBLEM_CONFLICT: c_int = 3;
pub const TDNF_REPOMD_NATIVE_PROBLEM_OBSOLETES: c_int = 4;
pub const TDNF_REPOMD_NATIVE_PROBLEM_FILE_CONFLICT: c_int = 5;
pub const TDNF_REPOMD_NATIVE_PROBLEM_UNSUPPORTED_MULTIPLE: c_int = 6;
pub const enum__TDNF_REPOMD_NATIVE_PROBLEM_TYPE = c_uint;
pub const TDNF_REPOMD_NATIVE_PROBLEM_TYPE = enum__TDNF_REPOMD_NATIVE_PROBLEM_TYPE;
pub const struct__TDNF_REPOMD_NATIVE_TRANSACTION_PROBLEM = extern struct {
    nType: TDNF_REPOMD_NATIVE_PROBLEM_TYPE = @import("std").mem.zeroes(TDNF_REPOMD_NATIVE_PROBLEM_TYPE),
    dwInputIndex: u32 = 0,
    pszPackage: [*c]const u8 = null,
    pszRelatedPackage: [*c]const u8 = null,
    pszSubject: [*c]const u8 = null,
    dwCount: u32 = 0,
};
pub const TDNF_REPOMD_NATIVE_TRANSACTION_PROBLEM = struct__TDNF_REPOMD_NATIVE_TRANSACTION_PROBLEM;
pub const struct__TDNF_REPOMD_NATIVE_TRANSACTION_PLAN_ITEM = extern struct {
    dwPriorOffset: u32 = 0,
    dwPriorCount: u32 = 0,
};
pub const TDNF_REPOMD_NATIVE_TRANSACTION_PLAN_ITEM = struct__TDNF_REPOMD_NATIVE_TRANSACTION_PLAN_ITEM;
pub const struct__TDNF_REPOMD_NATIVE_TRANSACTION_PLAN = extern struct {
    dwItemCount: u32 = 0,
    pdwOrderIndices: [*c]u32 = null,
    pItems: [*c]TDNF_REPOMD_NATIVE_TRANSACTION_PLAN_ITEM = null,
    dwPriorHnumCount: u32 = 0,
    pdwPriorHnums: [*c]u32 = null,
    dwProblemCount: u32 = 0,
    pProblems: [*c]TDNF_REPOMD_NATIVE_TRANSACTION_PROBLEM = null,
};
pub const TDNF_REPOMD_NATIVE_TRANSACTION_PLAN = struct__TDNF_REPOMD_NATIVE_TRANSACTION_PLAN;
pub const struct__TDNF_REPOMD_NATIVE_SOLVER_PACKAGE = extern struct {
    pszRepository: [*c]const u8 = null,
    pszName: [*c]const u8 = null,
    pszVersion: [*c]const u8 = null,
    pszRelease: [*c]const u8 = null,
    pszArch: [*c]const u8 = null,
    pszChecksumType: [*c]const u8 = null,
    pszChecksumValue: [*c]const u8 = null,
    pszLocationHref: [*c]const u8 = null,
    pszLocationBase: [*c]const u8 = null,
    pszSummary: [*c]const u8 = null,
    nPackageSize: u64 = 0,
    nInstalledSize: u64 = 0,
    dwPackageId: u32 = 0,
    dwRepositoryId: u32 = 0,
    dwEpoch: u32 = 0,
    dwRpmDbHnum: u32 = 0,
    nRepositoryKind: c_int = 0,
    nHasEpoch: c_int = 0,
    nHasRpmDbHnum: c_int = 0,
    nChecksumIsPkgId: c_int = 0,
    nChecksumIsHeaderOnly: c_int = 0,
    nHasPackageSize: c_int = 0,
    nHasInstalledSize: c_int = 0,
};
pub const TDNF_REPOMD_NATIVE_SOLVER_PACKAGE = struct__TDNF_REPOMD_NATIVE_SOLVER_PACKAGE;
pub const struct__TDNF_REPOMD_NATIVE_SOLVER_ACTION = extern struct {
    dwPackageRef: u32 = 0,
    dwKind: u32 = 0,
    dwReason: u32 = 0,
    dwPriorOffset: u32 = 0,
    dwPriorCount: u32 = 0,
    dwRequestedJobId: u32 = 0,
    nHasRequestedJobId: c_int = 0,
};
pub const TDNF_REPOMD_NATIVE_SOLVER_ACTION = struct__TDNF_REPOMD_NATIVE_SOLVER_ACTION;
pub const struct__TDNF_REPOMD_NATIVE_SOLVER_RELATION = extern struct {
    pszName: [*c]const u8 = null,
    pszVersion: [*c]const u8 = null,
    pszRelease: [*c]const u8 = null,
    pszFlags: [*c]const u8 = null,
    dwComparison: u32 = 0,
    dwEpoch: u32 = 0,
    dwSense: u32 = 0,
    nHasEpoch: c_int = 0,
    nPre: c_int = 0,
};
pub const TDNF_REPOMD_NATIVE_SOLVER_RELATION = struct__TDNF_REPOMD_NATIVE_SOLVER_RELATION;
pub const struct__TDNF_REPOMD_NATIVE_SOLVER_PROBLEM = extern struct {
    capability: TDNF_REPOMD_NATIVE_SOLVER_RELATION = @import("std").mem.zeroes(TDNF_REPOMD_NATIVE_SOLVER_RELATION),
    dwKind: u32 = 0,
    dwPackageRef: u32 = 0,
    dwRelatedPackageRef: u32 = 0,
    dwJobId: u32 = 0,
    dwCount: u32 = 0,
    nHasPackageRef: c_int = 0,
    nHasRelatedPackageRef: c_int = 0,
    nHasCapability: c_int = 0,
    nHasJobId: c_int = 0,
};
pub const TDNF_REPOMD_NATIVE_SOLVER_PROBLEM = struct__TDNF_REPOMD_NATIVE_SOLVER_PROBLEM;
pub const struct__TDNF_REPOMD_NATIVE_SOLVER_RESULT = extern struct {
    pPackages: [*c]TDNF_REPOMD_NATIVE_SOLVER_PACKAGE = null,
    pdwSelectedPackageRefs: [*c]u32 = null,
    pActions: [*c]TDNF_REPOMD_NATIVE_SOLVER_ACTION = null,
    pdwPriorPackageRefs: [*c]u32 = null,
    pdwPriorHnums: [*c]u32 = null,
    pProblems: [*c]TDNF_REPOMD_NATIVE_SOLVER_PROBLEM = null,
    pdwSkippedJobIds: [*c]u32 = null,
    dwPackageCount: u32 = 0,
    dwSelectedPackageCount: u32 = 0,
    dwActionCount: u32 = 0,
    dwPriorPackageRefCount: u32 = 0,
    dwProblemCount: u32 = 0,
    dwSkippedJobCount: u32 = 0,
};
pub const TDNF_REPOMD_NATIVE_SOLVER_RESULT = struct__TDNF_REPOMD_NATIVE_SOLVER_RESULT;
pub const struct__TDNF_REPOMD_NATIVE_SOLVER_LIVE_REPOSITORY_V16 = extern struct {
    pszId: [*c]const u8 = null,
    pszCacheDir: [*c]const u8 = null,
    pszSnapshotFile: [*c]const u8 = null,
    pszDirectory: [*c]const u8 = null,
    nPriority: i32 = 0,
    dwCost: u32 = 0,
};
